final project part II
